syntax = "proto3";

package grpc.comment;

option go_package = "./comment_example/commentpb";

message Comment {
  int64 post_id = 1;
  int32 comment_id = 2;
  string comment_text = 3;
  repeated Reaction reactions = 4;
  repeated Comment comments = 5;
}

message Reaction {
  int64 user_id = 1;
  ReactionType reaction_type = 2;
}

enum ReactionType {
  UNKNOWN = 0;
  LIKE = 1;
  DISLIKE = 2;
  LOVE = 3;
  HAPPY = 4;
  SAD = 5;
  ANGRY = 6;
}
